<resources>
    <string name="app_name">WM Conejo El Patio</string>

    <string-array name="breeds">

        <item>New Zealand</item>
        <item>Californian</item>
        <item>Flemish Giant</item>
        <item>PS Line</item>
        <item>Hyla Optima</item>
        <item>Hyla Plus</item>
        <item>German Giant</item>
        <item>Holland Lop</item>

    </string-array>

    <string name="col1">Name</string>
    <string name="col2">Age</string>
    <string name="col3">Surname</string>
    <string name="row1Name">Ali</string>
    <string name="row1Age">51</string>
    <string name="row1Surname">Mohammad</string>
    <string name="row2Name">Dave</string>
    <string name="row2Age">45</string>
    <string name="row2Surname">Smith</string>
    <string name="row3Name">Jason</string>
    <string name="row3Age">67</string>
    <string name="row3Surname">William</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_rabbit_feeding_log">RabbitFeedingLog</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>